--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,17 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
+body {
+  font-family: 'Poiret One', cursive;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 20px;
+}
+/*# sourceMappingURL=style.css.map */
