--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500&display=swap');
 
+*{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Poiret One', cursive;
     margin: 0;
@@ -176,6 +180,102 @@ body{
         }
 
     }
+}
+
+.contact{
+    h1{
+        font-size: 50px;
+        font-weight: 400;
+        margin-top: 30px;
+        font-family: 'Advent Pro', sans-serif;
+
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .form-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .forms-forms{
+        max-width: 800px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .names{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+
+        input{
+            font-size: 20px;
+            width: 435px;
+            height: 45px;
+            margin: 10px 0px;
+            border: 3px solid yellowgreen;
+            background-color: aliceblue;
+        }
+
+        .column{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    
+    }
+
+    .rest{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+        input{
+            font-size: 20px;
+            width: 900px;
+            height: 45px;
+            margin: 15px 0px;
+            border: 3px solid yellowgreen;
+            background-color: aliceblue;
+        }
+
+        #text{
+            height: 230px;
+            width: 900px;
+            font-size: 20px;   
+            border: 3px solid yellowgreen;   
+            background-color: aliceblue;      
+        }
+
+        #submit{
+            width: 150px;
+            border: 2px solid black;   
+            background-color: rgb(153, 214, 224);
+        }
+    
+    }
+
+    .error{
+        margin-top: 10px;
+        margin-bottom: 20px;
+        font-size: 20px;
+        font-weight: 900;
+        height: 10px;
+    }
+
 }
 
 
