--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,4 +13,61 @@
     width: 90vw;
   }
 }
+
+@media (max-width: 590px) {
+  .resume .boxes {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .names {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  #fname, #lname {
+    width: 92vw;
+  }
+  .welcome {
+    margin-top: 40px;
+  }
+  .nav-bar a {
+    font-size: 8px;
+    margin: 2vw;
+  }
+  .banner-image-text {
+    height: 95vh;
+  }
+  .hamburger {
+    margin: 20px 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .hamburger .line {
+    width: 50px;
+    height: 6px;
+    background-color: #001930;
+    margin: 15px;
+  }
+  .navigation {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 95vh;
+    width: 100vw;
+    background: gold;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: none;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+  }
+  .navigation.open {
+    height: 100vh;
+  }
+}
 /*# sourceMappingURL=responsive.css.map */
