--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -64,31 +64,36 @@
 
     .hamburger{
         margin: 20px 30px;
-        position: absolute;
+        position: fixed;
+        z-index: 1;
         top: 0;
         right: 0;
         .line{
             width: 50px;
             height: 6px;
-            background-color: rgb(0, 25, 48);
+            background-color: rgb(255, 255, 255);
             margin: 15px;
         }
     }
 
-    .navigation{
-        position: absolute;
-        top: 0; //these two used to position the large box correctly
-        right: 0;
-        height: 95vh;
-        width: 100vw;
-        background: gold;
-        flex-direction: column;
-        display: none;
-        transition: all 1s ease-in-out;
+    .nav-links.open{
+        clip-path: circle(180vh at 90% -10%);
     }
 
-    .navigation.open{
+    .nav-links{
+        margin-top: 0px;
+        border-radius: 0px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgb(0, 25, 48);
         height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        // display: none;
+        clip-path: circle(0vh at 90% -20%); //above
+        transition: all 0.8s ease-in-out;
+        align-items: center;
     }
 
 }
