--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -48,9 +48,7 @@
     }
 
     .nav-bar{
-        .navigation{
-            // display: none;
-        }
+
         a{
             font-size: 8px;
             margin: 2vw;
@@ -90,8 +88,7 @@
         height: 100vh;
         width: 100%;
         flex-direction: column;
-        // display: none;
-        clip-path: circle(0vh at 90% -20%); //above
+        clip-path: circle(0vh at 90% -20%); 
         transition: all 0.8s ease-in-out;
         align-items: center;
     }
