--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -56,7 +56,7 @@
     }
 
     .banner-image-text{
-        height: 95vh;
+        height: 93vh;
     }
 
 
@@ -66,16 +66,23 @@
         z-index: 1;
         top: 0;
         right: 0;
+        transition: 0.9s;
         .line{
-            width: 50px;
-            height: 6px;
-            background-color: rgb(255, 255, 255);
-            margin: 15px;
+            width: 35px;
+            height: 5px;
+            background-color: #00203FFF;
+            margin: 7px;
+        }
+
+        &:hover{
+            .line{
+                background-color: rgba(173, 239, 209, 0.774);
+            }
         }
     }
 
     .nav-links.open{
-        clip-path: circle(180vh at 90% -10%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
 
     .nav-links{
@@ -83,14 +90,27 @@
         border-radius: 0px;
         position: fixed;
         top: 0;
-        left: 0;
+        left:0;
         background: rgb(0, 25, 48);
         height: 100vh;
         width: 100%;
         flex-direction: column;
-        clip-path: circle(0vh at 90% -20%); 
-        transition: all 0.8s ease-in-out;
+        clip-path: polygon(100% 0, 100% 0%, 100% 100%, 100% 100%);       
+        transition: all 0.6s ease-in-out;
         align-items: center;
+    }
+
+    footer{
+        .footer-content{
+            height: auto;
+            ul{
+                flex-direction: column;
+                height: 300px;
+                li{
+                    margin-top: 40px;
+                }
+            }
+        }
     }
 
 }
